  Configuration errors will stop MQTTSubscribe from loading.
  To 'ignore' the error and allow MQTTSubscribe to load, set 'log_validation_errors = true'.
- For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Upgrade-Guide#upgrading-to-v3-from-v2
  
Enhancements:
- Configuration mode
  Provide functions to export, update, and validate MQTTSubscribe's configuration.
  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/MQTTSubscribe-Configurator-Mode.

- Simulation mode
  Simulates running MQTTSubscribe as a WeeWX driver or service.
  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/MQTTSubscribe-Simulator-mode

- MQTTSubscribe's configuration is now validated on startup.
- Support for paho-mqtt v2.
- Version of paho-mqtt is now logged.

V2.3.0
Fixes:
- Cache (expires_after) is valid when bound to the archive record.

Enhancements:
- On a connection error, display text reason along with numerical return code.
- Support more complex json messages.
  For an example see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/json-example#complex-json

V2.2.3
Fixes:
- Failing when binding is archive and caching is configured because RecordCache was not instantiated.
- Fail when record generation is hardware, binding is loop, and caching is configured.
  As of now this configuration is not supported.
Enhancements:
- Align instructions to a package install. Package installs set the path.
  The use of $BIN_ROOT was misleading/wrong.
- Additional/improved logging.
Internal:
- Revamped management of multiple python versions in local development enviroment.
- Issues waiting for information from submitter are automatcally marked stale and closed.
- Ability to configure python versions to not test with.
  Useful if Appveyor images are broken.
- Update Appveyor build to work with WeeWX v5.

V2.2.2
Fixes:
- When a subset of subfields is ignored, wrong values are extracted from message. 

V2.2.1